--- a/src/sizeguide/sizeguide.scss
+++ b/src/sizeguide/sizeguide.scss
@@ -152,7 +152,7 @@ a.link-btn.size-guide {
 
     .modal-body {
       flex: 1;
-      overflow: scroll;
+      overflow: auto;
     }
 
     .modal-footer {
